<resources>
    <string name="app_name">Pet Control</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="version">Pet control v1</string>
    <string name="welcome">Bienvenido</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="configNeed">Debe configurar su dispositivo en el menu de arriba a la derecha</string>
    <string name="closeToContinue">Pulse cerrar al finalizar para volver al modo normal</string>
    <string name="scan">scan</string>
    <string name="waitDialog">Espere unos segundos</string>
    <string name="needReboot">Exito: Debes reiniciar para ver los cambios</string>
    <string name="adminPassNull">Por favor configure la contraseña de administración</string>
    <!-- Strings related to Settings -->
    <string name="action_settings">Configuación</string>
    <string name="action_exit">Salir</string>
    <string name="action_pairdevices">Emparejar</string>
    <string name="action_pairdevices_ask">¿Emparejar?</string>
    <string name= "need_this_permission">Esta aplicacion no puede funcionar sin dichos permisos</string>
    <string name="permission_granted_try_again">Ahora puede intentarlo de nuevo</string>
    <string name="permission_need_for_photo">Sin estos permisos no podra subir foto</string>
    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_admin_password">Contraseña administracion</string>
    <string name="pref_admin_password_summary">Sera usada para acceder a sus dispositivos y como contraseña de conexion del hotspot. No se olvide de ella</string>
    <string name="pref_ap_name">Hotspot name</string>
    <string name="pref_ap_name_summary">Nombre Hotspot. Configuraremos su telefono movil para que se puedan conectar los dispositivos</string>
    <string name="pref_show_welcome_tab">Bienvenida</string>
    <string name="pref_show_welcome_tab_summary">Mostrar Bienvenida al comenzar</string>
    <!-- About -->
    <string name="pref_header_about">Sobre&#8230;</string>

    <!-- TABS -->
    <string name="btnUpdate">Actualizar</string>
    <string name="btnHelp">Ayuda</string>
    <string name="btnClose">Cerrar</string>
    <string name="pair">Emparejar</string>

    <!-- CLIENT TAB -->
    <string name="name">Nombre</string>
    <string name="phone">Telefono</string>
    <string name="ChipID">ChipID</string>
    <string name="areyousure">¿Esta seguro? </string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="foto">foto</string>
    <string name="lights">Luces</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibración</string>
    <string name="reboot">Reiniciar</string>
    <string name="error">Error</string>
    <string name="battery">Bat:</string>
    <string-array name="desconn_list">
        <item>Nada</item>
        <item>Luces</item>
        <item>Pitido</item>
        <item>Vibrador</item>
    </string-array>

    <!-- TAB OVerview -->
    <string name="overview">overview</string>
    <string name="alertSens">Alerta lejania</string>
    <string name="refreshTime">Comprobación cliente</string>
    <string name="onLostConn">A la desconexión</string>
    <string name="online">Online</string>
    <string name="clients">Clientes</string>
    <!--
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    -->
</resources>
